--- a/src/Blogger/BlogBundle/Resources/views/Page/index.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Page/index.html.twig
@@ -18,7 +18,7 @@
             </div>
             
             <footer class="meta">
-                <p>Comments: -</p>
+                <p>Comments: <a href="{{ path('BloggerBlogBundle_blog_show', { 'id': blog.id }) }}#comments">{{ blog.comments|length }}</a></p>
                 <p>Posted by <span class="highlight">{{ blog.author }}</span></p>
                 <p>Tags: <span class="highlight">{{ blog.tags }}</span></p>
             </footer>
